+ Netbeans config